--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "contentful": "^9.1.5",
+    "mongoose": "^6.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
