--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
     "contentful": "^9.1.5",
     "mongoose": "^6.2.0",
@@ -15,7 +16,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-responsive-carousel": "^3.2.22"
+    "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "8.5.0",
