--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "stripe": "^8.202.0"
   },
   "devDependencies": {
     "eslint": "8.5.0",
