--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.25.0",
     "contentful": "^9.1.5",
+    "cookie": "^0.4.2",
     "mongoose": "^6.2.0",
     "next": "12.0.7",
     "react": "17.0.2",
