--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.6.0",
     "@reduxjs/toolkit": "^1.7.2",
-    "@stripe/react-stripe-js": "^1.7.0",
-    "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.25.0",
     "contentful": "^9.1.5",
     "cookie": "^0.4.2",
