--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "stripe": "^8.202.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7"
   }
